--- a/registration.html
+++ b/registration.html
@@ -94,7 +94,7 @@
 </head>
 <body>
     <nav>
-        <a href="page_1.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="firstsemestr.html">Первый семестр</a>
         <a href="secondsem.html">Второй семестр</a>
         <a href="uslugi.html">Услуги</a>
