--- a/uslugi.html
+++ b/uslugi.html
@@ -336,7 +336,7 @@
         </div>
     </header>
     <nav>
-        <a href="page_1.html">Главная</a>
+        <a href="index.html">Главная</a>
         <a href="firstsemestr.html">Первый семестр</a>
         <a href="secondsem.html">Второй семестр</a>
         <a href="uslugi.html">Услуги</a>
