--- a/uslugi.html
+++ b/uslugi.html
@@ -329,7 +329,7 @@
 
 <body>
     <header>
-        <img src="C:\Users\33397\Desktop\photo_5406955052607857041_x.jpg" alt="logo" height="30" width="30" />
+        <img src="лого.jpg" alt="logo" height="30" width="30" />
         <div class="right">
             <h4>ЭФБО-02-23</h4>
             <h4>Зайнуллина Диана Надировна</h4>
@@ -353,7 +353,7 @@
         <div class="column-right">
             <h3>Разработка веб-приложений</h3>
             <span class="block">
-                <img src="картинка1.jpg" alt="pic1" height="200" width="200"
+                <img src="услуги1.jpg" alt="pic1" height="200" width="200"
                     class="pic" />
                 <div>
                     <a href="registration.html"><button type="button"
@@ -361,7 +361,7 @@
                 </div>
             </span>
             <span class="block">
-                <img src="картинка2.jpg" alt="pic2" class="pic" height="200"
+                <img src="услуги2.jpg" alt="pic2" class="pic" height="200"
                     width="200" />
                 <div>
                     <a href="registration.html"><button type="button" onclick="toggleActive(this)">Корпоративный
@@ -369,7 +369,7 @@
                 </div>
             </span>
             <span class="block">
-                <img src="картинка3.jpg" alt="pic3" class="pic" height="200"
+                <img src="услуги3.jpg" alt="pic3" class="pic" height="200"
                     width="200" />
                 <div>
                     <a href="registration.html"><button type="button"
@@ -410,7 +410,7 @@
     </div>
     <footer>
         <a href="https://vk.com/id567877525" class="vk">
-            <img src="C:\Users\33397\Desktop\photo_5406955052607857016_x.jpg" style="float: right" alt="vk" height="50"
+            <img src="вк.jpg" style="float: right" alt="vk" height="50"
                 width="70" />
         </a>
         <p class="center">&copy; Зайнуллина Диана Надировна, 2024</p>
