--- a/firstsemestr.html
+++ b/firstsemestr.html
@@ -291,7 +291,7 @@
 <body>
   <header>
       <img
-    src="C:\Users\33397\Desktop\photo_5406955052607857041_x.jpg"
+    src="лого.jpg"
       alt = logo
       height="30"
       width="30"
