--- a/secondsem.html
+++ b/secondsem.html
@@ -222,7 +222,7 @@
     <header class="header fixed-top">
         <div class="container d-flex justify-content-between align-items-center pb-3">
             <div class="d-flex">
-                <img src="C:\Users\33397\Desktop\photo_5406955052607857041_x.jpg" alt="logo" height="30" width="30" />
+                <img src="лого.jpg" alt="logo" height="30" width="30" />
             </div>
             <div class="ml-auto">
                 <ul class="list-unstyled text-end fio">
@@ -268,10 +268,10 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="C:\Users\33397\Desktop\photo_5348100853757766483_x.jpg" class="d-block w-100" alt="...">
+                        <img src="ноты.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="C:\Users\33397\Desktop\photo_5348100853757766480_x.jpg" class="d-block w-100" alt="...">
+                        <img src="музыка.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -537,10 +537,10 @@
     </main>
     <footer class="text-center">
         <div class="icons mb-3">
-            <a href="https://t.me/diana_zainullina" target="_blank" class="me-3">
+            <a href="вк" target="_blank" class="me-3">
                 <img src="тг.jpg" width="50" height="50" alt="Telegram">
             </a>
-            <a href="https://vk.com/id567877525" target="_blank">
+            <a href="вк" target="_blank">
                 <img src="вк.jpg" width="50" height="50" alt="VK">
             </a>
         </div>
