--- a/secondsem.html
+++ b/secondsem.html
@@ -364,7 +364,7 @@
                     <div class="col-lg-4 col-sm-6 mb-3">
                         <div class="product-card">
                             <div class="product-thumb">
-                                <a href="#"><img src="наушники.jpg" alt=""></a>
+                                <a href="#"><img src="наушники1.jpg" alt=""></a>
                             </div>
                             <div class="product-details">
                                 <h4><a href="#">Наушники</a></h4>
